fix: minor adjustments to spacing

--- a/assets/scss/ninfa/_post.scss
+++ b/assets/scss/ninfa/_post.scss
@@ -22,7 +22,7 @@
     }
 
     blockquote {
-        margin-block: 1em 1em;
+        margin-block: 1em;
         margin-inline: 0;
         padding: 0.5em 1em;
         border-left: 0.25em solid var(--accent-color);
@@ -96,6 +96,7 @@
     &-body {
         margin-left: 5em;
         max-width: 70ch;
+        margin-bottom: 2rem; 
     }
 
     p {
@@ -160,6 +161,7 @@
         .post-body {
             margin-left: 0;
             max-width: 100%;
+            margin-bottom: 2rem;
         }
 
         figure {
